feat(java-sdk): introduce SRI web service implementation and testing